--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <header class="container-header">
-        <section>
+      <header class="container">
+        <section class="row">
           <h1>Valentine Farms</h1>
-          </section>
-            <section>
+          <br>
+            <p>
               <form id="sign-up-form">
                 <legend>Sign up</legend>
                   <label for="sign-up">Email</label>
@@ -27,8 +27,9 @@
                   <input id="sign-up-password-confirmation"type="password" name="credentials[password_confirmation]" placeholder="Confirm Password" />
                   <input type="submit" value="Sign up" />
               </form>
-            </section>
-            <section>
+            </p>
+            <br>
+            <p>
               <form id="sign-in-form">
                 <legend>Sign In</legend>
                   <label for="sign-in">Email</label>
@@ -37,21 +38,69 @@
                   <input id="sign-in-password" type="password" name="credentials[password]" placeholder='Password' />
                   <input type="submit" value="Sign in" />
               </form>
-            </section>
-            <section>
+            </p>
+            <br>
+            <p>
               <form id="sign-out-form">
                 <legend>Sign Out</legend>
                 <input type="submit" value="Sign out" />
               </form>
-            </section>
-            <section>
+            </p>
+            <br>
+            <p>
               <form id="change-password-form">
                 <legend>Change Password</legend>
                   <input type="password" name="passwords[old]" placeholder="Old Password" />
                   <input type="password" name="passwords[new]" placeholder="New Password" />
                   <input type="submit" value="Change Password" />
               </form>
-            </section>
+            </p>
+          </section>
+          <div>List a Product</div>
+
+          <section>
+            <form id="create-form-group">
+                <!-- this is a text box for the name of the product to be listed -->
+              <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" name="product[name]"class="form-control" id="product-name" placeholder="Product Name">
+              </div>
+                <!-- this is a drop down for the expiration date for the product -->
+                <!-- https://mdbootstrap.com/docs/jquery/forms/date-picker/ -->
+                <!-- <div id="date-picker-example" class="md-form md-outline input-with-post-icon datepicker">
+                <input placeholder="Select date" type="text" id="example" class="form-control">
+                <label for="example">Try me...</label>
+                <i class="fas fa-calendar input-prefix" tabindex=0></i>
+              </div> -->
+              <div class="form-group">
+                <label for="expiration">Expiration Date:</label>
+                <input type="text" name="product[expiration]"class="form-control" id="product-expiration" placeholder="Product Expiration Date">
+              </div>
+                <!-- boolean for responding whether a product is organic or not -->
+              <div class="form-group">
+                <label for="quality">Product Quality:</label>
+                <select class="form-control" name="product[isOrganic]"id="product-quality" placeholder="Is it Organic?">
+                  <option>Is it Organic?</option>
+                  <option>Yes</option>
+                  <option>No</option>
+                </select>
+              </div>
+                <!-- this is a drop down for the quantity of the product -->
+              <div class="form-group">
+                <label for="quantity">Quantity:</label>
+                <input class="form-control" name="product[quantity]" id="product-quantity" placeholder="Amount of Product">
+              </div>
+              <div>
+              <input type="submit" value="Add Product">
+              </div>
+            </form>
+            <br>
+            <button id="get-products">View all Products</button>
+          </section>
+          <br>
+          <div id="products-display">
+            <h2>Products</h2>
+          </div>
       </header>
     </body>
 </html>
