--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
           </form>
           <br>
           <h3>Delete Products</h3>
-          <form>
-            <input required type="text" name="product[id]" placeholder="Product ID">
+          <form id="delete-products">
+            <input required type="text" name="product[id]" placeholder="Product ID" />
+            <input type="submit" value="Delete" />
           </form>
           <div id="display-products">
             <h2>Products</h2>
