--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="col-md-3" id="sign-up-col">
 
                       <!-- Sign Up Button trigger modal -->
-            <button type="button" id="sign-up-button" class="btn btn-primary btn-sm color" data-toggle="modal" data-target="#signUpModal">
+            <button type="button" class="btn btn-primary btn-sm color" data-toggle="modal" data-target="#signUpModal">
               Sign Up
             </button>
 
@@ -69,7 +69,7 @@
               </form> -->
 
                       <!-- Sign In Button trigger modal -->
-            <button type="button" id="sign-in-button" class="btn btn-primary btn-sm pull-right color" data-toggle="modal" data-target="#signInModal">
+            <button type="button" class="btn btn-primary btn-sm pull-right color" data-toggle="modal" data-target="#signInModal">
               Sign In
             </button>
 
@@ -342,6 +342,7 @@
 
       </header>
       <div class="container">
+        <br>
         <div class="row">
           <div class="col-md-4"></div>
             <div class="col-md-4">
