--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form id="sign-up-form">
+                    <form id="sign-up-form form">
                         <input id="sign=up" type="Email" name="credentials[email]" placeholder="Email" />
                         <input id="sign-up-password" type="password" name="credentials[password]" placeholder="Password" />
                         <input id="sign-up-password-confirmation"type="password" name="credentials[password_confirmation]" placeholder="Confirm Password" />
@@ -84,7 +84,7 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form id="sign-in-form">
+                    <form id="sign-in-form form">
                           <input id="sign-in" type="Email" name="credentials[email]" placeholder="Email" />
                           <input id="sign-in-password" type="password" name="credentials[password]" placeholder='Password' />
                         <div class="modal-footer">
@@ -116,7 +116,7 @@
               Sign Out
             </button> -->
 
-              <form id="sign-out-form">
+              <form id="sign-out-form form">
                 <input type="submit" class="color" value="Sign out" />
               </form>
 
@@ -136,7 +136,7 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form id="change-password-form">
+                    <form id="change-password-form form">
                           <input type="password" name="passwords[old]" placeholder="Old Password" />
                           <input type="password" name="passwords[new]" placeholder="New Password" />
                         <div class="modal-footer">
