Made edits to typos
There were some messages that were generating that did not make any
sense. I changed them accordingly.

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                           <input required type="text" name="product[id]" placeholder="Product ID" />
                           <input required type="text" name="product[name]" placeholder="Product Name" />
                           <input required type="text" name="product[expiration]" placeholder="Product Expiration" />
-                          <input required type="text" name="product[isOrganic]" placeholder="Product Quality" />
+                          <input required type="text" name="product[isOrganic]" placeholder="Is it Organic" />
                           <input required type="text" name="product[quantity]" placeholder="Product Quantity" />
                           <!-- <input type="submit" class="color" value="Update Product" /> -->
                             <div class="modal-footer">
