--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="col-md-3" id="sign-up-col">
 
                       <!-- Sign Up Button trigger modal -->
-            <button type="button" class="btn btn-primary btn-sm color" data-toggle="modal" data-target="#signUpModal">
+            <button type="button" id="signUpModalButton" class="btn btn-primary btn-sm color" data-toggle="modal" data-target="#signUpModal">
               Sign Up
             </button>
 
@@ -69,7 +69,7 @@
               </form> -->
 
                       <!-- Sign In Button trigger modal -->
-            <button type="button" class="btn btn-primary btn-sm pull-right color" data-toggle="modal" data-target="#signInModal">
+            <button type="button" id="signInModalButton" class="btn btn-primary btn-sm pull-right color" data-toggle="modal" data-target="#signInModal">
               Sign In
             </button>
 
