--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
           <div class="col-md-3" id="sign-up-col">
 
                       <!-- Sign Up Button trigger modal -->
-            <button type="button" id="signUpModalButton" class="btn btn-primary btn-sm color" data-toggle="modal" data-target="#signUpModal">
+            <button type="button" id="signUpModalButton" class="btn btn-primary btn-sm color close-form" data-toggle="modal" data-target="#signUpModal">
+
               Sign Up
             </button>
 
@@ -36,7 +37,7 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h4 class="modal-title" id="signUpLabel">Sign Up</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close close-form" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
@@ -49,7 +50,7 @@
                         <br>
                         <div class="modal-footer">
                           <button type="submit" id="sign-up-button" class="btn btn-primary form-reset">Sign Up</button>
-                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-secondary close-form" data-dismiss="modal">Close</button>
                         </div>
                     </form>
                   </div>
@@ -121,7 +122,7 @@
               </form>
 
                       <!-- Change Password Button trigger modal -->
-            <button type="button" id="change-password-button" class="btn btn-primary btn-sm pull-right color" data-toggle="modal" data-target="#changePasswordModal">
+            <button type="button" id="change-password-button" class="btn btn-primary btn-sm pull-right color close-form" data-toggle="modal" data-target="#changePasswordModal">
               Change Password
             </button>
 
@@ -131,7 +132,7 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h4 class="modal-title" id="changePasswordLabel">Change Password</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close close-form" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
@@ -141,7 +142,7 @@
                           <input type="password" name="passwords[new]" placeholder="New Password" />
                         <div class="modal-footer">
                           <button type="submit" id="change-password-button" class="btn btn-primary form-reset">Change Password</button>
-                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-secondary close-form" data-dismiss="modal">Close</button>
                         </div>
                     </form>
                   </div>
@@ -175,7 +176,7 @@
                       <div class="modal-content">
                         <div class="modal-header">
                           <h4 class="modal-title" id="listProductLabel">List Product</h4>
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <button type="button" class="close close-form" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                           </button>
                         </div>
@@ -209,7 +210,7 @@
                             </div> -->
                               <div class="modal-footer">
                                 <button type="submit" class="btn btn-primary">List Product</button>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary close-form" data-dismiss="modal">Close</button>
                               </div>
                           </form>
                         </div>
@@ -265,7 +266,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <h4 class="modal-title" id="updateProductsLabel">Update Products</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <button type="button" class="close close-form" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
                       </div>
@@ -279,7 +280,7 @@
                           <!-- <input type="submit" class="color" value="Update Product" /> -->
                             <div class="modal-footer">
                               <button type="submit" class="btn btn-primary">Update Product</button>
-                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                              <button type="button" class="btn btn-secondary close-form" data-dismiss="modal">Close</button>
                             </div>
                         </form>
                       </div>
@@ -300,7 +301,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <h4 class="modal-title" id="deleteProductsLabel">Delete Products</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <button type="button" class="close close-form" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
                       </div>
@@ -311,7 +312,7 @@
                           <!-- <input type="submit" class="color" value="Update Product" /> -->
                           <div class="modal-footer">
                             <button type="submit" class="btn btn-primary">Delete Product</button>
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-secondary close-form" data-dismiss="modal">Close</button>
                           </div>
                       </form>
                     </div>
