Updated form clear
Forms now clear when hitting close instead of submit.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
                   <input id="sign-up-password-confirmation"type="password" name="credentials[password_confirmation]" placeholder="Confirm Password" />
                   <input type="submit" value="Sign up" />
               </form> -->
-
                       <!-- Sign In Button trigger modal -->
             <button type="button" id="signInModalButton" class="btn btn-primary btn-sm pull-right color" data-toggle="modal" data-target="#signInModal">
               Sign In
@@ -299,7 +298,7 @@
                 <div class="modal fade" id="deleteProductsModal" data-keyboard="false" data-backdrop="static" tabindex="-1" aria-labelledby="deleteProductsLabel" aria-hidden="true">
                   <div class="modal-dialog modal-sm">
                     <div class="modal-content">
-                      <div class="modal-header">
+                      <div class="modal-header">ikol
                         <h4 class="modal-title" id="deleteProductsLabel">Delete Products</h4>
                         <button type="button" class="close close-form" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
